--- a/views/update_user.ejs
+++ b/views/update_user.ejs
@@ -23,11 +23,11 @@
         <div class="new_user">
           <div class="form-group">
             <lable for="name" class="text-light">Name</lable>
-            <input type="hidden" name="id" value="" />
+            <input type="hidden" name="id" value="<%= user._id %>" >
             <input
               type="text"
               name="name"
-              value=""
+              value="<%= user.name %>"
               placeholder="Mark Stoenis"
             />
           </div>
@@ -37,7 +37,7 @@
             <input
               type="text"
               name="email"
-              value=""
+             value="<%= user.email%>"
               placeholder="example@gmail.com"
             />
           </div>
@@ -45,12 +45,12 @@
           <div class="form-group">
             <lable for="gender" class="text-light">Gender</lable>
             <div class="radio inline">
-              <input type="radio" id="radio-2" name="gender" value="Male" />
+              <input type="radio" id="radio-2" name="gender" value="Male" <%= user.gender == 'Male' ? 'checked' : '' %>>
               <lable for="radio-2" class="radio-label">Male</lable>
             </div>
     
             <div class="radio inline">
-              <input type="radio" id="radio-3" name="gender" value="Female" />
+              <input type="radio" id="radio-3" name="gender" value="Female"  <%= user.gender == 'Female' ? 'checked' : '' %>>
               <lable for="radio-3" class="radio-label">Female</lable>
             </div>
           </div>
@@ -58,12 +58,12 @@
           <div class="form-group">
             <lable for="gender" class="text-light">Status</lable>
             <div class="radio inline">
-              <input type="radio" id="radio-4" name="status" value="Active" />
+              <input type="radio" id="radio-4" name="status" value="Active" <%= user.status == 'Active' ? 'checked' : '' %>>
               <lable for="radio-4" class="radio-label">Active</lable>
             </div>
     
             <div class="radio inline">
-              <input type="radio" id="radio-5" name="status" value="Inactive"/>
+              <input type="radio" id="radio-5" name="status" value="Inactive" <%= user.status == 'Inactive' ? 'checked' : '' %>>
               <lable for="radio-5" class="radio-label">Inactive</lable>
             </div>
           </div>
